--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "scheduler",
+  "name": "@rdash-tech/scheduler",
   "version": "1.0.0",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
@@ -7,7 +7,14 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "tsc"
   },
-  "author": "",
+  "author": {
+    "name": "RDash",
+    "email": "tech.admin@rdash.io"
+  },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/rdash-tech/activity-schedular.git"
+  },
   "license": "ISC",
   "description": "",
   "devDependencies": {
