--- a/.github/workflows/package.yml
+++ b/.github/workflows/package.yml
@@ -29,6 +29,18 @@ jobs:
           echo "NEW_VERSION=1.0.0-$(git rev-parse --short HEAD)" >> $GITHUB_ENV
           echo "NEW_VERSION=1.0.0-$(git rev-parse --short HEAD)"
 
+      - name: Set Version
+        id: set-version
+        run: |
+          if [[ "${{ github.event_name }}" == "release" ]]; then
+            echo "NEW_VERSION=${{ github.event.release.tag_name }}" >> $GITHUB_ENV
+          elif [[ "${{ github.event_name }}" == "workflow_dispatch" ]]; then
+            BRANCH_NAME=$(echo "${{ github.ref_name }}" | sed 's/[^a-zA-Z0-9._-]/-/g')
+            SHORT_HASH=$(git rev-parse --short HEAD)
+            echo "NEW_VERSION=${BRANCH_NAME}-${SHORT_HASH}" >> $GITHUB_ENV
+          fi
+          echo "New version: $NEW_VERSION"
+
       - run: npm version ${{ env.NEW_VERSION }} --no-git-tag-version && npm publish
         env:
           NODE_AUTH_TOKEN: ${{ secrets.NPM_GITHUB_TOKEN }}
