--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@rdash-tech/scheduler",
-  "version": "1.0.2",
+  "version": "1.0.3",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
   "scripts": {
@@ -22,5 +22,6 @@
   },
   "dependencies": {
     "date-fns": "^4.1.0"
-  }
+  },
+  "include": ["src"]
 }
